# meetcap

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  config.toml.example  pyproject.toml
meetcap/: cli.py  config.py  notify.py  watch.py
meetcap/audio/: paths.py  recorder.py  sources.py  volume.py
meetcap/detect/: pipewire_streams.py  window.py
meetcap/drive/: auth.py  client.py  upload.py
meetcap/merge/: plan.py  splice.py
meetcap/transcribe/: local_diarize.py  local_pipeline.py  local_whisper.py  mixdown.py  openai_diarize.py  render.py  speaker_match.py  summary.py  summary_ollama.py
meetcap/tray/: daemon.py  indicator.py  merge_dialog.py  retry.py  state.py
meetcap/voice/: enroll.py
systemd/: meetcap.service
tests/: conftest.py  test_audio_paths.py  test_audio_recorder.py  test_audio_sources.py  test_audio_volume.py  test_cli_fallback.py  test_config.py  test_detect_pipewire_streams.py  test_detect_window.py  test_drive_upload.py  test_merge_plan.py  test_notify.py  test_transcribe_mixdown.py  test_transcribe_openai_diarize.py  test_transcribe_render.py  test_transcribe_summary.py  test_tray_retry.py
