[project]
name = "meetcap"
version = "0.1.0"
description = "Linux meeting capture: PipeWire record + diarized transcription (cloud or local) + Google Drive upload."
requires-python = ">=3.12,<3.13"
authors = [{ name = "Valerii" }]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-slugify>=8.0",
    "openai>=1.50",
    "google-api-python-client>=2.140",
    "google-auth>=2.30",
    "google-auth-oauthlib>=1.2",
    "tomli-w>=1.0",
    # Tray UI (AppIndicator3 via PyGObject). Linux-only; system libgirepository
    # and gir bindings (`python3-gi`, `gir1.2-ayatanaappindicator3-0.1`) must
    # be installed separately. Pinned <3.51 because 3.51+ requires
    # girepository-2.0 which Ubuntu 24.04 doesn't ship.
    "pygobject>=3.46,<3.51; sys_platform == 'linux'",
]

[project.optional-dependencies]
# Local transcription backend (NVIDIA GPU recommended). Install with:
#   uv sync --extra local
# Then accept the EULA at https://huggingface.co/pyannote/speaker-diarization-community-1
# (and https://huggingface.co/pyannote/segmentation-3.0) and put your HF token
# in `<repo>/.env` as HF_TOKEN=hf_xxx.
local = [
    # cu126 wheels — requires NVIDIA driver >= 12.6. pyannote 4 needs torchaudio
    # >= 2.8 which is only in cu124+ wheels.
    "torch>=2.10",
    "torchaudio>=2.10",
    "faster-whisper>=1.2",
    "pyannote.audio>=4.0",
    "speechbrain>=1.1",
    "soundfile>=0.13",
    "numpy>=2.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu126" }]
torchaudio = [{ index = "pytorch-cu126" }]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[project.scripts]
meetcap = "meetcap.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["meetcap"]

[tool.hatch.build.targets.wheel.force-include]
"meetcap/assets" = "meetcap/assets"

[dependency-groups]
dev = [
    "ruff>=0.15",
    "mypy>=2.0",
    "pytest>=9.0",
    "pytest-mock>=3.14",
    "pre-commit>=4.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
ignore_missing_imports = true
untyped_calls_exclude = ["google", "google_auth_oauthlib", "googleapiclient"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
warn_return_any = false
implicit_reexport = true
